For more detailed instructions on filling in the ChangeLog form, see 
`/fi/doc/procedures/changelogs.txt'.
*******************************************************************************
<version for this commit> (in version.mak)

<standard changelog date stamp>
	* <changes go here...>

******************************************************************************
2.2.6

2001-09-18  Kevin Layer  <layer@crikey>

	* emacsdir.pl,
	* Makefile: use /cygdrive/x instead of //x, since the latter
	doesn't work in the newest cygwin

******************************************************************************
2.2.5

2001-09-10  Kevin Layer  <layer@crikey>

    from smh:
	* fi-modes.el (fi::find-tag-common-lisp): raise the intelligence
	of the default tag in find-tag by removing explicit package
	qualifiers.

******************************************************************************
2.2.4

2001-08-23  Kevin Layer  <layer@crikey>

	* fi-lep.el: updated fi:goto-char doc string

*******************************************************************************
2.2.3

2001-06-20  Kevin Layer  <layer@crikey>

    from cox:
	* fi-basic-lep.el: spr24414: fix to fix for bug10686 (see below)

*******************************************************************************
2.2.2

2001-06-13  Kevin Layer  <layer@crikey>

	* fi-lep.el: added fi:goto-char

*******************************************************************************
2.2.1

2001-06-05  Kevin Layer  <layer@crikey>

	* fi-modes.el: new variable fi::do-parse-mode-line-and-package,
	which can turn off parsing package/mode line

2001-06-05  Kevin Layer  <layer@crikey>

	* *.el:
	- fix copyright
	- fix "permission to modify" to clarify intent (for the semanticly
	impaired) per discussion with rms

*******************************************************************************
2.2.0

2001-05-22  Charles A. Cox  <cox@pie>

	* fi-basic-lep.el: use emacs-mule encoding.  bug10686
