@@ -7,6 +7,15 @@ For more detailed instructions on filling in the ChangeLog form, see
 	* <changes go here...>
 
 ******************************************************************************
+post-release patch
+
+2001-11-01  Kevin Layer  <layer@crikey>
+
+    from mikel for spr24742
+	* fi-xemacs.el: don't contact lisp over and over again, cache the
+	value used for the first menu item, and uncache it on the last. 
+
+******************************************************************************
 2.2.6
 
 2001-09-18  Kevin Layer  <layer@crikey>
